@@ -1,4 +1,14 @@
 2006-03-06 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/GParted_Core.h,
+	  include/TreeView_Detail.h,
+	  src/GParted_Core.cc,
+	  src/TreeView_Detail.cc: show greyed-out mountpoint of unmounted
+	  partitions in the treeview as an improved way to identify
+	  partitions. (#333027)
+	* src/Win_GParted.cc: cleanups
+	
+2006-03-06 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/TreeView_Detail.h,
 	  src/TreeView_Detail.cc: support showing of warning icon even when a
